--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "docs:build": "vuepress build docs",
     "docs:dev": "vuepress dev docs",
     "start": "node -r ./dist/start.js",
-    "test": "NODE_ENV=test jest --coverage --forceExit --runInBand",
+    "test": "dotenv -e .env.test -- docker-compose -p \"hbp_test\" -f docker-compose.yaml -f docker-compose.test.yaml up --build hasura-backend-plus",
     "test:ci": "NODE_ENV=ci jest --coverage --forceExit --runInBand",
     "test:watch": "NODE_ENV=test jest --watchAll --maxWorkers=1",
     "report-coverage": "codecov"
@@ -78,6 +78,7 @@
     "@types/body-parser": "1.19.0",
     "@types/cookie-parser": "1.4.2",
     "@types/cors": "2.8.6",
+    "@types/death": "^1.1.1",
     "@types/ejs": "3.0.2",
     "@types/email-templates": "7.0.1",
     "@types/express": "4.17.6",
@@ -110,6 +111,9 @@
     "@vuepress/plugin-back-to-top": "1.4.1",
     "codecov": "^3.7.1",
     "cz-conventional-changelog": "3.1.0",
+    "death": "^1.1.0",
+    "docker-compose": "^0.23.6",
+    "dotenv-cli": "^4.0.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-jest": "23.8.2",
