--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "moduleResolution": "node",
     "strictNullChecks": true,
     "resolveJsonModule": false,
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["./node_modules/@types"]
   }
 }
