--- a/.env
+++ b/.env
@@ -59,7 +59,7 @@ JWT_KEY=
 # DEFAULT_ANONYMOUS_ROLE='anonymous'
 
 ## List of additional comma-separated user fields that are expected on registration
-# REGISTRATION_CUSTOM_FIELDS=
+REGISTRATION_CUSTOM_FIELDS=username
 
 ## EXPERIMENTAL: Enables anonymous authentication, like Firebase
 # ANONYMOUS_USERS_ENABLE=false
