--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express-rate-limit": "5.1.1",
     "express-session": "^1.17.1",
     "fs-extra": "^9.0.0",
+    "google-auth-library": "^7.0.4",
     "graphql": "15.0.0",
     "graphql-request": "1.8.2",
     "graphql-tag": "2.11.0",
