--- a/.env.development
+++ b/.env.development
@@ -77,10 +77,10 @@ REGISTRATION_CUSTOM_FIELDS=name,username
 # VERIFY_EMAILS=false
 
 ## Optional redirection on successful account activation
-REDIRECT_URL_SUCCESS=https://localhost:3000/oauth/callback
+REDIRECT_URL_SUCCESS=http://localhost:3000/oauth/callback
 
 ## Optional redirection on failed account activation
-REDIRECT_URL_ERROR=https://localhost:3000/oauth/callback
+REDIRECT_URL_ERROR=http://localhost:3000/oauth/callback
 
 ## Allow User Impersonation via admin secret
 # USER_IMPERSONATION_ENABLE=false
