--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lodash.kebabcase": "4.1.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.23",
     "nocache": "^2.1.0",
     "node-fetch": "^2.6.1",
     "nodemailer": "6.4.16",
