--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ private.pem
 node_modules
 yarn-error.log
 package-lock.json
+
+# Recommendation from https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored (not using Zero-installs)
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
