--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
   },
   "dependencies": {
     "@hapi/joi": "17.1.1",
-    "@nicokaiser/passport-apple": "^0.2.1",
-    "@types/sharp": "^0.27.1",
+    "@nicokaiser/passport-apple": "0.2.1",
+    "@types/sharp": "0.27.1",
     "archiver": "4.0.1",
     "aws-sdk": "2.656.0",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
     "cookie-parser": "1.4.5",
     "cors": "2.8.5",
@@ -52,84 +52,84 @@
     "ejs": "3.0.2",
     "email-templates": "7.0.4",
     "express": "4.17.1",
-    "express-boom": "^3.0.0",
+    "express-boom": "3.0.0",
     "express-fileupload": "1.1.9",
     "express-rate-limit": "5.1.1",
-    "express-session": "^1.17.1",
-    "fs-extra": "^9.0.0",
-    "google-auth-library": "^7.0.4",
+    "express-session": "1.17.1",
+    "fs-extra": "9.0.0",
+    "google-auth-library": "7.0.4",
     "graphql": "15.0.0",
     "graphql-request": "1.8.2",
     "graphql-tag": "2.11.0",
-    "hasura-cli": "^1.3.3",
+    "hasura-cli": "1.3.3",
     "helmet": "3.22.0",
     "hibp": "9.0.0",
     "jose": "1.28.1",
     "js-yaml": "3.13.1",
     "lodash.kebabcase": "4.1.1",
-    "module-alias": "^2.2.2",
-    "morgan": "^1.10.0",
-    "nanoid": "^3.1.23",
-    "nocache": "^2.1.0",
-    "node-fetch": "^2.6.1",
+    "module-alias": "2.2.2",
+    "morgan": "1.10.0",
+    "nanoid": "3.1.23",
+    "nocache": "2.1.0",
+    "node-fetch": "2.6.1",
     "nodemailer": "6.4.16",
     "notevil": "1.3.3",
     "otplib": "12.0.1",
     "passport": "0.4.1",
-    "passport-facebook": "^3.0.0",
+    "passport-facebook": "3.0.0",
     "passport-github2": "0.1.12",
     "passport-google-oauth20": "2.0.0",
-    "passport-linkedin-oauth2": "^2.0.0",
-    "passport-spotify": "^2.0.0",
-    "passport-twitter": "^1.0.4",
-    "passport-windowslive": "^1.0.2",
-    "path-exists-cli": "^1.0.0",
+    "passport-linkedin-oauth2": "2.0.0",
+    "passport-spotify": "2.0.0",
+    "passport-twitter": "1.0.4",
+    "passport-windowslive": "1.0.2",
+    "path-exists-cli": "1.0.0",
     "qrcode": "1.4.4",
-    "sharp": "^0.27.0",
-    "temp-dir": "^2.0.0",
+    "sharp": "0.27.0",
+    "temp-dir": "2.0.0",
     "uuid": "7.0.3"
   },
   "devDependencies": {
     "@types/archiver": "3.1.0",
-    "@types/bcryptjs": "^2.4.2",
+    "@types/bcryptjs": "2.4.2",
     "@types/body-parser": "1.19.0",
     "@types/cookie-parser": "1.4.2",
     "@types/cors": "2.8.6",
-    "@types/death": "^1.1.1",
+    "@types/death": "1.1.1",
     "@types/ejs": "3.0.2",
     "@types/email-templates": "7.0.1",
     "@types/express": "4.17.6",
-    "@types/express-boom": "^3.0.0",
+    "@types/express-boom": "3.0.0",
     "@types/express-fileupload": "1.1.3",
     "@types/express-rate-limit": "5.0.0",
-    "@types/express-session": "^1.17.0",
-    "@types/fs-extra": "^8.1.0",
+    "@types/express-session": "1.17.0",
+    "@types/fs-extra": "8.1.0",
     "@types/hapi__joi": "16.0.12",
     "@types/helmet": "0.0.45",
     "@types/jest": "25.2.1",
     "@types/js-yaml": "3.12.3",
     "@types/lodash.kebabcase": "4.1.6",
-    "@types/morgan": "^1.9.0",
-    "@types/node": "^13.11.1",
-    "@types/node-fetch": "^2.5.7",
+    "@types/morgan": "1.9.0",
+    "@types/node": "13.11.1",
+    "@types/node-fetch": "2.5.7",
     "@types/nodemailer": "6.4.0",
     "@types/passport": "1.0.3",
-    "@types/passport-facebook": "^2.1.9",
+    "@types/passport-facebook": "2.1.9",
     "@types/passport-github2": "1.2.4",
     "@types/passport-google-oauth20": "2.0.3",
-    "@types/passport-linkedin-oauth2": "^1.5.1",
-    "@types/passport-spotify": "^1.1.0",
-    "@types/passport-twitter": "^1.0.34",
+    "@types/passport-linkedin-oauth2": "1.5.1",
+    "@types/passport-spotify": "1.1.0",
+    "@types/passport-twitter": "1.0.34",
     "@types/qrcode": "1.3.4",
-    "@types/supertest": "^2.0.8",
-    "@types/temp-dir": "^2.0.2",
+    "@types/supertest": "2.0.8",
+    "@types/temp-dir": "2.0.2",
     "@types/uuid": "7.0.2",
     "@typescript-eslint/eslint-plugin": "2.28.0",
     "@typescript-eslint/parser": "2.28.0",
     "@vuepress/plugin-back-to-top": "1.4.1",
-    "codecov": "^3.7.1",
+    "codecov": "3.7.1",
     "cz-conventional-changelog": "3.1.0",
-    "dotenv-cli": "^4.0.0",
+    "dotenv-cli": "4.0.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-jest": "23.8.2",
@@ -139,16 +139,16 @@
     "jest-extended": "0.11.5",
     "lint-staged": "10.1.3",
     "markdown-it-multimd-table": "4.0.1",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "4.1.5",
     "prettier": "2.0.4",
     "pretty-quick": "2.0.1",
     "supertest": "4.0.2",
     "ts-jest": "25.3.1",
     "ts-node": "8.8.2",
-    "ts-node-dev": "^1.1.6",
+    "ts-node-dev": "1.1.6",
     "tsconfig-paths": "3.9.0",
     "typescript": "3.8.3",
-    "vuepress": "^1.8.2"
+    "vuepress": "1.8.2"
   },
   "_moduleAliases": {
     "@shared": "./dist/shared",
