--- a/.env.development
+++ b/.env.development
@@ -133,12 +133,12 @@ REDIRECT_URL_ERROR=http://localhost:3000/oauth/callback
 # GITHUB_USER_PROFILE_URL= # Optional
 
 #---------------------- Google -----------------------#
-GOOGLE_ENABLE=true
+GOOGLE_ENABLED=true
 GOOGLE_CLIENT_ID=784379870166-8qls4e0rtfp4ha7lfn9of7q5roti6257.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=9WNfa-kcBnMlU1nnouwM0-lA
 
 #--------------------- Facebook ----------------------#
-FACEBOOK_ENABLE=true
+FACEBOOK_ENABLED=true
 FACEBOOK_CLIENT_ID=2646501982080163
 FACEBOOK_CLIENT_SECRET=faf9ea0080b1be5befa0ef68729abd41
 
